2017.10/_sources/plugins/available/phylogeny/midpoint-root.txt
midpoint-root: Midpoint root an unrooted phylogenetic tree.
===========================================================

.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <pre>Usage: qiime phylogeny midpoint-root [OPTIONS]

     Midpoint root an unrooted phylogenetic tree.

   Options:
     --i-tree PATH           Artifact: Phylogeny[Unrooted]  [required]
                             The
                             phylogenetic tree to be rooted.
     --o-rooted-tree PATH    Artifact: Phylogeny[Rooted] [required if not passing
                             --output-dir]
                             The rooted phylogenetic tree.
     --output-dir DIRECTORY  Output unspecified results to a directory
     --cmd-config PATH       Use config file for command options
     --verbose               Display verbose output to stdout and/or stderr
                             during execution of this action.  [default: False]
     --quiet                 Silence output if execution is successful (silence
                             is golden).  [default: False]
     --help                  Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
         <pre>Midpoint root an unrooted phylogenetic tree.

   Midpoint root an unrooted phylogenetic tree.

   Parameters
   ----------
   tree : Phylogeny[Unrooted]
       The phylogenetic tree to be rooted.

   Returns
   -------
   rooted_tree : Phylogeny[Rooted]
       The rooted phylogenetic tree.</pre>
       </div>
     </div>
   </div>